# linux_mcp

./: .gitignore  LICENSE  LINUX_PORT_NOTES.md  README.md  port_mac_mcp_to_linux.sh  pyproject.toml
examples/: AGENTS.md  codex-config.toml
mcp_server/: .env.example  adaptive_compression.py  cli.py  context_results.py  main.py  main.py.backup-20260721-143629  persistent_scheduler.py  project_ledger.py  requirements.txt  rest_routes.py  security.py  semantic_cache.py  telemetry.py  tools_browser.py  tools_files.py  tools_http.py  tools_interactive.py  tools_jobs.py  tools_macos.py  tools_search.py  tools_terminal.py  tools_workspace.py
openapi/: custom-gpt-actions.json
scripts/: benchmark-ultimate-context.py  codex_linux_mcp_guard.py  install-codex-hook.py  install-systemd-user.sh  uninstall-systemd-user.sh
tests/: test_codex_hook_guard.py  test_context_results.py  test_file_read_freshness.py  test_persistent_scheduler.py  test_project_ledger.py  test_semantic_cache_and_compression.py  test_token_bounds.py
